# panda

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
assets/: max_lyap_r_test_zeroshot.json
config/: config.yaml  dataset.yaml  dynamix.yaml  dysts.yaml  evaluation.yaml  model.yaml  plotting.yaml  train.yaml
notebooks/: kuramotoshivashinsky.ipynb  load_mlm_from_hf.ipynb  load_model_from_hf.ipynb  realdata.ipynb  vonkarman.ipynb
notebooks/analysis/: lyapunov_times.ipynb  mode_mixing.ipynb  model_analysis.ipynb  plot_completions_gpdims.ipynb  plot_distributional_metrics.ipynb  plot_lyapunov_comparison.ipynb
notebooks/pde/: don_ks.ipynb  don_vkvs.ipynb  fno_ks.ipynb  fno_vkvs.ipynb
notebooks/plot_evaluation_results/: evaluate_ablations.ipynb  evaluate_baselines.ipynb  evaluate_scaled_all.ipynb  plot_instance_metrics.ipynb
notebooks/scalinglaw/: evaluate_scalinglaw.ipynb  filter_and_save_params_dicts.ipynb  make_scalinglaw_params_splits.ipynb
panda/: __init__.py  attractor.py  augmentations.py  coupling_maps.py  dataset.py  dyst_data.py  evaluation.py  events.py  sampling.py  schedulers.py  skew_system.py
panda/baselines/: baselines.py  fm_baselines.py
panda/chronos/: model.py  pipeline.py
panda/patchtst/: modules.py  patchtst.py  pipeline.py
panda/utils/: __init__.py  data_utils.py  dyst_utils.py  eval_utils.py  plot_utils.py  train_utils.py
scripts/analysis/: compute_distributional_metrics.sh  compute_gpdims.py  compute_gpdims.sh  compute_inheritance.py  compute_invariants.py  compute_lyapunov.sh  compute_system_metrics.py  (+2 more)
(+34 files in other folders)
